include new class names to prevent wrap and hide overflow

--- a/src/views/User/User.styl
+++ b/src/views/User/User.styl
@@ -401,11 +401,11 @@
     }
 
     .game-history-table, .review-history-table {
-        .name, .date, .player, .library-lost-result, .library-won-result, .library-tie-result {
+        .name, .date, .player, .library-lost-result, .library-won-result, .library-tie-result, .library-lost-result-vs-weaker, .library-lost-result-vs-stronger, .library-won-result-vs-stronger, .library-won-result-vs-weaker, .library-won-result-unranked, .library-lost-result-unranked {
             white-space: nowrap;
         }
 
-         .library-lost-result, .library-won-result, .library-tie-result {
+         .library-lost-result, .library-won-result, .library-tie-result, .library-lost-result-vs-weaker, .library-lost-result-vs-stronger, .library-won-result-vs-stronger, .library-won-result-vs-weaker, .library-won-result-unranked, .library-lost-result-unranked {
             overflow: hidden;
         }
 
